Continued changing home

--- a/index.html
+++ b/index.html
@@ -941,7 +941,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4">
               <div class="causes maxwidth500 mb-sm-50">
                 <div class="thumb">
-                  <img class="img-fullwidth" alt="" src="http://placehold.it/350x250">
+                  <img class="img-fullwidth" alt="" src="images/HOME/HOME-Prep.jpg">
                 </div>
                 <div class="causes-details clearfix">
                   <div class="p-30 p-sm-15 bg-lighter">
@@ -957,7 +957,7 @@
             <div class="col-sm-4 col-md-4 col-lg-4">
               <div class="causes maxwidth500 mb-sm-50">
                 <div class="thumb">
-                  <img class="img-fullwidth" alt="" src="http://placehold.it/350x250">
+                  <img class="img-fullwidth" alt="" src="images/HOME/HOME-Camp.jpg">
                 </div>
                 <div class="causes-details clearfix">
                   <div class="p-30 p-sm-15 bg-lighter">
@@ -985,158 +985,22 @@
           <div class="row">
             <div class="col-md-8 col-md-offset-2 col-sm-12 col-xs-12">
               <h2 class="mt-0 line-height-1 text-center text-uppercase font-28">NUESTROS <span class="text-theme-colored font-weight-400">DESTINOS</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur quidem temporibus quisquam voluptas natus, provident porro et odio perferendis ipsam, amet sint</p>
+              <p>43 instituciones académicas ubicadas en 80 ciudades en 15 países. La unico que tienes que pensar es que quieres descubrir.</p>
             </div>
           </div>
         </div>
-            
+
               <!-- Portfolio Gallery Grid -->
               <div id="grid" class="gallery-isotope grid-3 gutter clearfix">
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item photography">
                   <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a data-lightbox="image" href="http://placehold.it/450x250"><i class="fa fa-plus"></i></a>
-                          <a href="#"><i class="fa fa-link"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="hover-link" data-lightbox="image" href="http://placehold.it/450x250">View more</a>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-                
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item branding">
-                  <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="#"><i class="fa fa-link"></i></a>
-                          <a href="#"><i class="fa fa-heart-o"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="hover-link" data-lightbox="image" href="http://placehold.it/450x250">View more</a>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item design">
-                  <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="#"><i class="fa fa-link"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="hover-link" data-lightbox="image" href="http://placehold.it/450x250">View more</a>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item photography">
-                  <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a class="popup-youtube" href="http://www.youtube.com/watch?v=0O2aH4XLbto"><i class="fa fa-youtube-play"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item branding">
-                  <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a class="popup-vimeo" href="https://vimeo.com/45830194"><i class="fa fa-play"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item design">
-                  <div class="thumb">
-                    <div class="flexslider-wrapper">
-                      <div class="flexslider">
-                        <ul class="slides">
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 1"><img src="http://placehold.it/450x250" alt=""></a></li>
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 2"><img src="http://placehold.it/450x250" alt=""></a></li>
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 3"><img src="http://placehold.it/450x250" alt=""></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="#"><i class="fa fa-picture-o"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item photography">
-                  <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a data-lightbox="image" href="http://placehold.it/450x250"><i class="fa fa-plus"></i></a>
-                          <a href="#"><i class="fa fa-link"></i></a>
-                        </div>
-                      </div>
-                    </div>
-                    <a class="hover-link" data-lightbox="image" href="http://placehold.it/450x250">View more</a>
-                  </div>
-                </div>
-                <!-- Portfolio Item End -->
-
-                <!-- Portfolio Item Start -->
-                <div class="gallery-item design">
-                  <div class="thumb">
-                    <div class="flexslider-wrapper" data-direction="vertical">
-                      <div class="flexslider">
-                        <ul class="slides">
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 1"><img src="http://placehold.it/450x250" alt=""></a></li>
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 2"><img src="http://placehold.it/450x250" alt=""></a></li>
-                          <li><a href="http://placehold.it/450x250" title="Portfolio Gallery - Photo 3"><img src="http://placehold.it/450x250" alt=""></a></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="overlay-shade"></div>
-                    <div class="icons-holder">
-                      <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a href="#"><i class="fa fa-picture-o"></i></a>
-                        </div>
+                        <p class="text-center">AUSTRALIA</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
                       </div>
                     </div>
                   </div>
@@ -1146,17 +1010,74 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item photography">
                   <div class="thumb">
-                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="project">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
-                        <div class="styled-icons icon-sm icon-dark icon-circled icon-theme-colored">
-                          <a data-lightbox="image" href="http://placehold.it/450x250"><i class="fa fa-plus"></i></a>
-                          <a href="#"><i class="fa fa-link"></i></a>
-                        </div>
+                        <p class="text-center">ESTADOS UNIDOS</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
                       </div>
                     </div>
-                    <a class="hover-link" data-lightbox="image" href="http://placehold.it/450x250">View more</a>
+                  </div>
+                </div>
+                <!-- Portfolio Item End -->
+
+                <!-- Portfolio Item Start -->
+                <div class="gallery-item photography">
+                  <div class="thumb">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
+                    <div class="overlay-shade"></div>
+                    <div class="icons-holder">
+                      <div class="icons-holder-inner">
+                        <p class="text-center">INGLATERRA</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Portfolio Item End -->
+
+                <!-- Portfolio Item Start -->
+                <div class="gallery-item photography">
+                  <div class="thumb">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
+                    <div class="overlay-shade"></div>
+                    <div class="icons-holder">
+                      <div class="icons-holder-inner">
+                        <p class="text-center">CANADÁ</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Portfolio Item End -->
+
+                <!-- Portfolio Item Start -->
+                <div class="gallery-item photography">
+                  <div class="thumb">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
+                    <div class="overlay-shade"></div>
+                    <div class="icons-holder">
+                      <div class="icons-holder-inner">
+                        <p class="text-center">MALTA</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- Portfolio Item End -->
+
+                <!-- Portfolio Item Start -->
+                <div class="gallery-item photography">
+                  <div class="thumb">
+                    <img class="img-fullwidth" src="http://placehold.it/450x250" alt="">
+                    <div class="overlay-shade"></div>
+                    <div class="icons-holder">
+                      <div class="icons-holder-inner">
+                        <p class="text-center">FRANCIA</p>
+                        <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="#">Más Información</a>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <!-- Portfolio Item End -->
