Finished quote and 4040 began work on Thank You page

--- a/Countries/UnitedStates.html
+++ b/Countries/UnitedStates.html
@@ -646,11 +646,11 @@
                 <!-- Portfolio Item Start -->
                 <div class="gallery-item photography">
                   <div class="thumb">
-                    <img class="img-fullwidth" src="../images/HOME/HOME-Paris.jpg" alt="">
+                    <img class="img-fullwidth" src="../images/HOME/HOME-Berlin.jpg" alt="">
                     <div class="overlay-shade"></div>
                     <div class="icons-holder">
                       <div class="icons-holder-inner">
-                        <p class="text-center">FRANCE</p>
+                        <p class="text-center">ALEMANIA</p>
                         <a class="btn btn-dark btn-theme-colored btn-flat btn-sm pull-left mt-10" href="France.html">Más Información</a>
                       </div>
                     </div>
