corrected name that was breaking form

--- a/page-404.html
+++ b/page-404.html
@@ -168,8 +168,8 @@
           <div class="container pt-0 pb-0">
             <div class="row">
               <div class="col-md-7">
-                <h1 class="font-200 line-height-1em mt-0 mb-0 text-theme-colored">404!</h1>
-                <h2 class="mt-0">ERROR! Destino no encontrado</h2>
+                <h1 class="font-200 line-height-1em mt-0 mb-0 text-theme-colored">¡404!</h1>
+                <h2 class="mt-0">¡ERROR! Destino no encontrado</h2>
                 <p>No pudimos encontrar el lugar al cual deseas viajar</p>
               </div>
               <div class="col-md-4">
