--- a/contact.html
+++ b/contact.html
@@ -491,7 +491,7 @@
                   <div class="col-sm-6">
                     <div class="form-group">
                       <label for="city">Ciudad o Departamento</label>
-                      <select id="city" name="country" class="form-control">
+                      <select id="city" name="city" class="form-control">
                         <option value="Bogotá D.C.">Bogotá D.C.</option>
                         <option value="Cali">Cali</option>
                         <option value="Amazonas">Amazonas</option>
