--- a/infopolicy.html
+++ b/infopolicy.html
@@ -67,8 +67,8 @@
 </head>
 <body class="">
 <div id="wrapper" class="clearfix">
-
-    <!-- Header -->
+  
+  <!-- Header -->
   <header id="header" class="header">
     <div class="header-top bg-theme-colored sm-text-center">
       <div class="container">
@@ -150,7 +150,7 @@
             </ul>
             <ul class="list-inline pull-right flip hidden-sm hidden-xs">
               <li>
-                <a  id="btn-coti" class="btn btn-colored btn-flat btn-theme-colored mt-15" href="cotizacion.html">Pide tu cotización</a>
+                <a id="btn-coti" class="btn btn-colored btn-flat btn-theme-colored mt-15" href="cotizacion.html">Pide tu cotización</a>
               </li>
             </ul>
           </nav>
@@ -158,41 +158,71 @@
       </div>
     </div>
   </header>
-
+  
   <!-- Start main-content -->
-  <div class="main-content">     
-    <!-- Section: home -->
-    <section id="home" class="fullscreen bg-lightest">
-      <div class="display-table text-center">
-        <div class="display-table-cell">
-          <div class="container pt-0 pb-0">
-            <div class="row">
-              <div class="col-md-8 col-sm-5">
-                <h1 class="line-height-1em mt-0 mb-0 text-theme-colored" style="font-size: 10em">¡GRACIAS!</h1>
-                <h2 class="mt-0">Estamos determinando el mejor destino para ti</h2>
-                <p>Uno de nuestros agentes se estará comunicando contigo pronto</p>
-              </div>
-              <div class="col-md-4">
-                <h3>Enlaces útiles</h3>
-                <div class="widget">
-                  <ul class="list-border">
-                    <li><a href="#destinos">Destinos</a></li>
-                    <li><a href="#cursos">Cursos en el exterior</a></li>
-                    <li><a href="testimony.html">Testimonios</a></li>
-                    <li><a href="about-us.html">Acerca de nosotros</a></li>
-                    <li><a href="contact.html">Contacto</a></li>  
-                  </ul>
-                </div>
-              </div>
+  <div class="main-content">
+    <section>
+      <div class="container pb-50 pb-sm-60">
+        <div class="section-content">
+          <div class="row">
+            <div class="col-md-12">
+              <h2 class="mt-0 line-bottom"><span class="font-weight-300">POLÍTICAS DEL TRATAMIENTO DE LA INFORMACIÓN </span> TRAVELEARNERS COLOMBIA S.A.S.</h2>
+              <p>Las políticas consignadas en este documento se han elaborado considerando las disposiciones contenidas en los artículos 15 y 20 de la Constitución Política de Colombia, la Ley 1581 de 2012 “Por la cual se dictan disposiciones generales para la protección de datos personales” y el Decreto 1377 de 2013 “por el cual se reglamenta parcialmente la ley 1581 de 2012.” Las políticas descritas a continuación aplican al tratamiento de los datos personales que recoja y maneje TRAVELEARNERS COLOMBIA S.A.S., en adelante TRAVELEARNERS ESTUDIOS EN EL EXTERIOR con domicilio en la Calle 116 # 45-67 de Bogotá, correo electrónico info@travelearners.com y teléfono (1) 3001720.</p>
+              <p>Las políticas y procedimientos consignados en este documento aplican a las bases de datos que contienen información acerca de: proveedores, clientes, usuarios de nuestra página web y redes sociales, empleados y terceros en general, información que ha sido recopilada en desarrollo del objeto social de TRAVELEARNERS ESTUDIOS EN EL EXTERIOR con ocasión del ofrecimiento y comercialización de nuestras escuelas e instituciones académicas aliadas en el exterior, enmarcado en las diferentes relaciones comerciales adelantadas a través de actividades de mercadeo y comercialización en medios electrónicos, físicos o redes sociales, procesos de selección de personal y vinculación laboral. Estos datos tendrán una vigencia de 15 años contados desde el momento de su recolección.</p>
+              <p class="lead">1. TRATAMIENTO DE LOS DATOS PERSONALES RECOLECTADOS POR TRAVELEARNERS ESTUDIOS EN EL EXTERIOR</p>
+              <p>Los datos de carácter personal cuya responsabilidad recaiga en TRAVELEARNERS ESTUDIOS EN EL EXTERIOR son incluidos en bases de datos y serán utilizados para las siguientes finalidades:</p>
+              <p>• Envío de información para el desarrollo de citas presenciales y personalizadas, costos y cotizaciones, requisitos y formularios para la obtención de visados, destinos y programas académicos ofrecidos por nuestras instituciones aliadas en el exterior, ofertas y publicidad relacionada con los servicios ofrecidos nuestros o de nuestras organizaciones aliadas.</p>
+              <p>• Facilitar la participación de los titulares de la información en actividades comerciales y de mercadeo.</p>
+              <p>• Informar sobre servicios prestados por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR o sus aliados comerciales relacionados con los recibidos al momento de suministrar los datos personales.</p>
+              <p>• Cumplir con obligaciones contraídas con nuestros clientes al momento de adquirir nuestros servicios.</p>
+              <p>• Informar sobre cambios en los productos o servicios ofrecidos por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR y sus aliados.</p>
+              <p>• Evaluar la calidad de servicio brindado.</p>
+              <p>• Realizar estudios de mercado sobre hábitos de consumo, perfiles demográficos y segmentación geográfica.</p>
+              <p>• Obtener servicios ofrecidos por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR.</p>
+              <p>• Operar procesos de selección de personal y recursos humanos al interior de TRAVELEARNERS ESTUDIOS EN EL EXTERIOR</p>
+              <p>• Cumplir con las obligaciones derivadas de las relaciones laborales con nuestro personal directo e indirecto, contactar a sus familiares, dependientes económicos y/o beneficiarios en caso de emergencia, para ofrecerle y prestar servicios de bienestar para empelado y sus beneficiarios.</p>
+              <p class="lead">2. DERECHOS COMO TITULAR DE LA INFORMACIÓN CONTENIDA EN NUESTRAS BASES DE DATOS</p>
+              <p>De acuerdo a lo establecido en el artículo 8 de la Ley 1581 de 2012 el titular de los datos personales tiene los siguientes derechos:</p>
+              <p>•  Conocer, actualizar y rectificar sus datos personales contenidos en las bases de datos recopiladas por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR.</p>
+              <p>• Solicitar prueba de la autorización otorgada a TRAVELEARNERS ESTUDIOS EN EL EXTERIOR para el tratamiento de sus datos personales.</p>
+              <p>• Ser informado por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR con previa solicitud, respecto del uso dado a sus datos personales.</p>
+              <p>• Presentar ante la Superintendencia de Industria y Comercio quejas por infracciones a lo dispuesto en la Ley 1581 de 2012 una vez agotado el trámite de consulta o reclamo ante el responsable del tratamiento.</p>
+              <p>• Revocar la autorización y/o solicitar la supresión de sus datos personales.</p>
+              <p>• Acceder en forma gratuita a sus datos personales que hayan sido objeto de tratamiento.</p>
+              <p class="lead">3. PROCEDIMIENTO PARA EL ACCESO, CONSULTA, RECTIFICACIÓN Y ACTUALIZACIÓN DE LA INFORMACIÓN</p>
+              <p>Los titulares de la información tienen derecho a acceder a sus propios datos personales y a los detalles del tratamiento de los últimos, así como a rectificarlos y actualizarlos en caso de encontrarse incoherencias o a solicitar su supresión cuando así lo consideren. Los canales de comunicación designados para garantizar el ejercicio de estos derechos a través de la presentación de una solicitud son:</p>
+              <p>• Nuestro centro de atención al cliente ubicado en:</p>
+              <p>Calle 116 #45-67, Bogotá, Colombia</p>
+              <p>• La dirección de correo electrónico info@travelearners.com</p>
+              <p>•Estos canales podrán ser utilizados por los titulares de la información o terceros autorizados por ley para actuar en su nombre con el propósito de ejercer los siguientes derechos:</p>
+              <p>I. DERECHO DE ACCESO: El titular podrá consultar de forma gratuita sus datos personales cuando así lo requiera. Para conocer los datos personales que son objeto de tratamiento por parte de TRAVELEARNERS ESTUDIOS EN EL EXTERIOR el titular de la información podrá colocar una solicitud indicando la información que desea conocer a través de cualquiera de los canales de comunicación antes mencionados y designados para este fin.</p>
+              <p>La petición será atendida en un término máximo de quince (15) días hábiles contados a partir de la fecha de recibo de la misma. Cuando no sea posible atender la petición dentro de dicho término se informará al solicitante expresando los motivos de la demora y señalando la fecha en que se atenderá su consulta, la cual en ningún caso podrá superar los ocho (8) días hábiles siguientes al vencimiento del primer término.</p>
+              <p>II. RECLAMOS. De conformidad con lo establecido en el artículo 14 de la Ley 1581 de 2012, cuando el Titular considere que la información contenida en la base de datos debe ser objeto de corrección, actualización o supresión por advertirse el presunto incumplimiento de cualquiera de los deberes contenidos en la Ley 1581 de 2012, este podrá presentar un reclamo ante TRAVELEARNERS ESTUDIOS EN EL EXTERIOR, el cual será tramitado bajo los siguientes parámetros:</p>
+              <p>Los derechos de rectificación, actualización o supresión o revocatoria del consentimiento únicamente podrán ser ejercidos por:</p>
+              <p>• El titular o sus causahabientes, previa acreditación de su identidad</p>
+              <p>• Su representante, previa acreditación de la representación</p>
+              <p>• Por estipulación a favor de otro o para otro.</p>
+              <p>Cuando la solicitud sea formulada por persona distinta del titular y no se acredite que la misma actúa en representación de aquél, no será ejecutada. La solicitud de rectificación, actualización, supresión o revocatoria debe ser presentada a través de los canales de comunicación habilitados por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR y contener, como mínimo, la siguiente información:</p>
+              <p>• El nombre y domicilio del titular o cualquier otro medio para recibir la respuesta.</p>
+              <p>• Los documentos que acrediten la identidad del solicitante y en caso dado, la de su representante con la respectiva autorización.</p>
+              <p>• La descripción clara y precisa de los datos personales respecto de los cuales el titular busca ejercer alguno de los derechos y la solicitud concreta.</p>
+              <p>• En caso dado otros elementos o documentos que faciliten la ubicación de los datos personales.</p>
+              <p>El término máximo para atender el reclamo será de quince (15) días hábiles contados a partir del día siguiente a la fecha de su recibo. Cuando no fuere posible atender el reclamo dentro de dicho término, se informará al solicitante sobre los motivos de la demora y la fecha en que se atenderá su reclamo, la cual en ningún caso podrá superar los ocho (8) días hábiles siguientes al vencimiento del primer término.</p>
+              <p class="lead">4. DATOS PERSONALES DE NIÑOS, NIÑAS Y ADOLESCENTES</p>
+              <p>En TRAVELEARNERS ESTUDIOS EN EL EXTERIOR la información y datos personales de niños, niñas y adolescentes es tratada de forma estrictamente confidencial en respeto de sus derechos fundamentales y en estricta observancia de sus intereses superiores asegurando su derecho a ser escuchados, teniendo en cuenta en cada caso su autonomía y grado de madurez conforme a lo expresado por la Corte Constitucional en sentencia C-748 de 2011.</p>
+              <p>Los datos personales de niños y niñas son utilizados por TRAVELEARNERS ESTUDIOS EN EL EXTERIOR garantizando que en todo caso se utilizan para su óptimo desarrollo respetando el interés superior del niño conforme al objeto social de TRAVELEARNERS ESTUDIOS EN EL EXTERIOR, esto es el ofrecimiento de una amplia gama de instituciones académicas en el exterior, viajes educativos e intercambios culturales alrededor del mundo.</p>
+              <p class="lead">5. ÁREA RESPONSABLE DE LA ATENCIÓN DE LA PETICIONES, CONSULTAS, RECLAMOS</p>
+              <p>En TRAVELEARNERS ESTUDIOS EN EL EXTERIOR el área responsable de atender peticiones de acceso, rectificación, actualización, supresión de datos o revocatoria del consentimiento o autorización otorgada para el tratamiento de datos personales, es la Gerencia Administrativa, ubicada en la Calle 116 # 45-67, Bogotá, Colombia.</p>
+              <p>La política de tratamiento de la información contenida en el presente documento entra en vigencia el día 15 de Octubre de 2013.</p>
             </div>
           </div>
         </div>
       </div>
-    </section> 
+    </section>
 
-  </div>  
+  </div>
   <!-- end main-content -->
-
+  
   <!-- Footer -->
   <footer id="footer" class="footer bg-black-222">
     <div class="container pt-70 pb-40">
@@ -303,6 +333,19 @@
 <!-- Footer Scripts -->
 <!-- JS | Custom script for all pages -->
 <script src="js/custom.js"></script>
+
+<!-- SLIDER REVOLUTION 5.0 EXTENSIONS  
+      (Load Extensions only on Local File Systems ! 
+       The following part can be removed on Server for On Demand Loading) -->
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.actions.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.carousel.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.kenburn.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.layeranimation.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.migration.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.navigation.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.parallax.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
+<script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.video.min.js"></script>
 
 </body>
 </html>
