fixed minor bugs

--- a/Programs/EducacionExterior.html
+++ b/Programs/EducacionExterior.html
@@ -162,11 +162,11 @@
   <!-- Start main-content -->
   <div class="main-content">
     
-    <section class="divider parallax layer-overlay overlay-dark-7" data-bg-img="../images/PROGRAMS/PROGRAM2.jpg" data-parallax-ratio="0.7">
+    <section class="divider parallax layer-overlay overlay-dark-7" data-bg-img="../images/PROGRAMS/PROGRAM4.jpg" data-parallax-ratio="0.7">
       <div class="container pt-90 pb-90">
         <div class="row">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1 class="text-white">¡Preparación Universitaria!</h1>
+            <h1 class="text-white">¡Educación superior en el exterior!</h1>
             <p class="lead text-white">Semestre académico desde $x,xxx USD</p>
             <a class="btn btn-colored btn-lg btn-flat btn-theme-colored pl-20 pr-20" href="../cotizacion.html">Pide tu cotización</a>
           </div>
