--- a/Countries/Australia.html
+++ b/Countries/Australia.html
@@ -102,7 +102,8 @@
           <div class="col-xs-12 col-sm-4 col-md-3 col-md-offset-3 ">
             <div class="widget no-border m-0">
               <div class="mt-10 mb-10 text-right flip pull-right xs-pull-center">
-                <div class="font-15 text-black-333 mb-5 font-weight-600 text-center"><i class="fa fa-phone-square text-theme-colored font-18"></i><a href="tel:031-300-1720"> (1) 300 1720</a></div>
+                <div class="font-15 text-black-333 mb-5 font-weight-600 text-center"><i class="fa fa-phone-square text-theme-colored font-18"></i><a href="tel:031-300-1720"> Bogota: (1) 300 1720</a></div>
+                <div class="font-15 text-black-333 mb-5 font-weight-600 text-center"><i class="fa fa-phone-square text-theme-colored font-18"></i><a href="tel:031-345-0589"> Cali: (1) 345 0589</a></div>
                 <p class="font-12 text-gray">¡Contáctanos para más detalles!</p>
               </div>
             </div>
@@ -111,34 +112,35 @@
       </div>
     </div>
     <div class="header-nav">
-      <div class="header-nav-wrapper navbar-scrolltofixed bg-light">
+      <div class="header-nav-wrapper navbar-scrolltofixed bg-dark">
         <div class="container">
-          <nav id="menuzord" class="menuzord default bg-light">
+          <nav id="menuzord" class="menuzord default bg-dark">
             <ul class="menuzord-menu">
               <li><a href="../index.html">Inicio</a></li>
               <li class="active"><a href="../index.html#destinos">Destinos</a>
                 <ul class="dropdown">
-                  <li><a href="UnitedStates.html">Estados Unidos</a></li>
-                  <li><a href="Australia.html">Australia</a></li>
-                  <li><a href="England.html">Inglaterra</a></li>
-                  <li><a href="Canada.html">Canadá</a></li>
-                  <li><a href="Newzealand.html">Nueva Zelanda</a></li>
-                  <li><a href="Malta.html">Malta</a></li>
-                  <li><a href="Ireland.html">Irlanda</a></li>
-                  <li><a href="Southafrica.html">Sudáfrica</a></li>
-                  <li><a href="France.html">Francia</a></li>
                   <li><a href="Germany.html">Alemania</a></li>
+                  <li><a href="Australia.html">Australia</a></li>
+                  <li><a href="Canada.html">Canadá</a></li>
+                  <li><a href="UnitedStates.html">Estados Unidos</a></li>
+                  <li><a href="France.html">Francia</a></li>
+                  <li><a href="England.html">Inglaterra</a></li>
+                  <li><a href="Ireland.html">Irlanda</a></li>
+                  <li><a href="Malta.html">Malta</a></li>
+                  <li><a href="Newzealand.html">Nueva Zelanda</a></li>        
+                  <li><a href="Southafrica.html">Sudáfrica</a></li>
                 </ul>
               </li>
               <li><a href="../index.html#cursos">Cursos en el Exterior</a>
                 <ul class="dropdown">
+                  <li><a href="../Programs/CampamentosVerano.html">Campamentos de verano</a></li>
+                  <li><a href="../Programs/CursosIdiomas.html">Cursos de francés, alemán y otros idiomas</a></li>
                   <li><a href="../Programs/InglesIntensivo.html">Cursos inglés general e intensivo</a></li>
+                  <li><a href="../Programs/EducacionExterior.html">Educación superior en el exterior</a></li>
+                  <li><a href="../Programs/InglesNegocios.html">Inglés de negocios</a></li>
+                  <li><a href="../Programs/PreparacionCAMBRIDGE.html">Preparación de exámenes Cambridge</a></li>
                   <li><a href="../Programs/PreparacionTOEFL.html">Preparación de IELTS y TOEFL</a></li>
-                  <li><a href="../Programs/PreparacionCAMBRIDGE.html">Preparación de Exámenes Cambridge</a></li>
-                  <li><a href="../Programs/InglesNegocios.html">Inglés de Negocios</a></li>
-                  <li><a href="../Programs/PreparacionUniversitaria.html">Preparación Universitaria</a></li>
-                  <li><a href="../Programs/CampamentosVerano.html">Campamentos de Verano</a></li>
-                  <li><a href="../Programs/CursosIdiomas.html">Cursos de Francés, Alemán y otros idiomas</a></li>
+                  <li><a href="../Programs/PreparacionUniversitaria.html">Preparación universitaria</a></li>
                 </ul>
               </li>
               <li><a href="../testimony.html">Testimonios</a></li>
